<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".TeknologiPertanian">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainLinear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Row 1 -->
            <android.support.v7.widget.CardView
                android:id="@+id/row_tsl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="keTSL">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/tsl"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Row 2 -->
            <android.support.v7.widget.CardView
                android:id="@+id/row_mp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="keMP">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/mp"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Row 3 -->
            <android.support.v7.widget.CardView
                android:id="@+id/row_tepa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="keTepa">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tepa"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Row 4 -->
            <android.support.v7.widget.CardView
                android:id="@+id/row_trki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="keTRKI">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/trki"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Row 5 -->
            <android.support.v7.widget.CardView
                android:id="@+id/row_trkjj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="keTRKJJ">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/trkjj"
                        android:gravity="left"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Row 6 -->
            <android.support.v7.widget.CardView
                android:id="@+id/row_ppa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="kePPA">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ppa"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Row 7 -->
            <android.support.v7.widget.CardView
                android:id="@+id/row_pp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="kePP">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/pp"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alignmentMode="alignMargins"
        android:columnCount="1"
        android:columnOrderPreserved="false"
        android:padding="10dp"
        android:rowCount="1">

    </GridLayout>
</LinearLayout>