<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EkonomiBisnis">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainLinear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Row 1 -->
            <android.support.v7.widget.CardView
                android:id="@+id/row_mi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="keMI">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/mi"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Row 2 -->
            <android.support.v7.widget.CardView
                android:id="@+id/row_akbd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="keAKBD">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/AKBD"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Row 3 -->
            <android.support.v7.widget.CardView
                android:id="@+id/row_akp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="keAKP">>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/akp"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Row 4 -->
            <android.support.v7.widget.CardView
                android:id="@+id/row_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="kePW">>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/pw"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Row 5 -->
            <android.support.v7.widget.CardView
                android:id="@+id/row_agbp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="keAGBP">>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/agbp"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Row 6 -->
            <android.support.v7.widget.CardView
                android:id="@+id/row_pa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="kePA">>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/pa"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Row 7 -->
            <android.support.v7.widget.CardView
                android:id="@+id/row_hotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="keHotel">>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/hotel"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alignmentMode="alignMargins"
        android:columnCount="1"
        android:columnOrderPreserved="false"
        android:padding="10dp"
        android:rowCount="1">

    </GridLayout>
</LinearLayout>